# unconstexpr

./: CMakeLists.txt  README.md
include/unconstexpr/: meta_any.hpp  meta_counter.hpp  meta_partial.hpp  meta_tlist.hpp  meta_type.hpp  meta_value.hpp  meta_vlist.hpp  unconstexpr.hpp  uniq_value.hpp
include/unconstexpr/tools/: type_list.hpp  type_map.hpp  type_string.hpp  var_list.hpp
tests/: CMakeLists.txt
tests/include/unconstexpr/tools/: auto_testing.hpp  println.hpp
tests/src/: main.cpp
